--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@prisma/client": "^6.8.2",
     "axios": "^1.9.0",
     "bcrypt": "^6.0.0",
+    "connect-redis": "^8.1.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-rate-limit": "^7.5.0",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
-    "multer": "^2.0.0"
+    "multer": "^2.0.0",
+    "redis": "^5.1.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/node": "^22.15.21",
