--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^6.8.2",
+    "@supabase/supabase-js": "^2.50.0",
     "axios": "^1.9.0",
     "bcrypt": "^6.0.0",
     "connect-redis": "^8.1.0",
@@ -21,13 +21,13 @@
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.0",
+    "nanoid": "^5.1.5",
     "redis": "^5.1.1",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/node": "^22.15.21",
     "nodemon": "^3.1.10",
-    "prisma": "^6.8.2",
     "tsx": "^4.19.4",
     "typescript": "^5.8.3"
   },
