--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "nodemon index.js",
+    "dev": "doppler run -c dev -- npm start"
   },
   "author": "",
   "license": "ISC",
@@ -19,10 +19,10 @@
     "express": "^5.1.0",
     "express-rate-limit": "^7.5.0",
     "express-validator": "^7.2.1",
+    "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.0",
     "nanoid": "^5.1.5",
-    "redis": "^5.1.1",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
