--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^6.9.0",
     "@supabase/supabase-js": "^2.50.0",
     "axios": "^1.9.0",
     "bcrypt": "^6.0.0",
@@ -24,6 +25,7 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.0",
     "nanoid": "^5.1.5",
+    "prisma": "^6.9.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
