--- a/.env_example
+++ b/.env_example
@@ -1,12 +1,4 @@
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
-
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-
-SUPABASE_URL
-SUPABASE_SERVICE_ROLE_KEY
-JWT_SECRET
+DATABASE_URLJWT_SECRET
 STEAM_API_KEY
 TMDB_API_KEY
 TMDB_READ_KEY
@@ -15,3 +7,4 @@ SESSION_SECRET
 REDIS_URL
 IPSTACK_API_KEY
 WEATHER_API_KEY
+TICKETMASTER_KEY
